<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Durgesh Trivedi

  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/serviceSizeNames"
        android:entryValues="@array/serviceSizeValues"
        android:key="service_size"
        android:summary="@string/pref_category_service_summary"
        android:summaryOn="@string/pref_service_size_summary"
        android:title="@string/pref_service_size_title" />

    <com.hlidskialf.android.preference.SeekBarPreference
        android:defaultValue="0"
        android:key="service_transparency"
        android:max="100"
        android:summary="@string/pref_service_transparency_summary"
        android:title="@string/pref_service_transparency_title" />

    <PreferenceScreen android:title="@string/pref_screen_reorder_title" >
        <ListPreference
             android:key="left_bar"
            android:defaultValue="@string/pref_lefbar_title"
            android:entries="@array/orderValues"
            android:entryValues="@array/orderValues"
            android:summary="@string/pref_order_leftbar_summary"
            android:title="@string/pref_order_lefbar_title" />
        <ListPreference
             android:key="right_bar"
            android:defaultValue="@string/pref_rightbare_title"
            android:entries="@array/orderValues"
            android:entryValues="@array/orderValues"
            android:summary="@string/pref_order_leftbottombar_summary"
            android:title="@string/pref_order_leftbottombar_title" />
        <ListPreference
            android:key="left_bottom_bar"
            android:defaultValue="@string/pref_leftbottombar_title"
            android:entries="@array/orderValues"
            android:entryValues="@array/orderValues"
            android:summary="@string/pref_order_rightbar_summary"
            android:title="@string/pref_order_rightbare_title" />
        <ListPreference
            android:key="right_bottom_bar"
            android:defaultValue="@string/pref_rightbottombar_title"
            android:entries="@array/orderValues"
            android:entryValues="@array/orderValues"
            android:summary="@string/pref_order_rightbottombar_summary"
            android:title="@string/pref_order_rightbottombar_title" />
    </PreferenceScreen>

    <PreferenceCategory android:title="@string/pref_category_info_title" >
        <Preference
            android:key="pref_help"
            android:summary="@string/pref_help_summary"
            android:title="@string/pref_help_title" />
        <Preference
            android:key="pref_version"
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version_title" />
        <Preference
            android:key="pref_author"
            android:summary="@string/pref_author_summary"
            android:title="@string/pref_author_title" />
        <Preference
            android:key="pref_url"
            android:summary="@string/pref_url_summary"
            android:title="@string/pref_url_title" />
    </PreferenceCategory>
</PreferenceScreen>